2007-02-17  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c:
	- Now automatically retrieving the remote application sdef ;
	- Honors the 'id' attribute of the sdef format ;
	- Be smarter when converting types from Ruby to OSA, making sure primitive
	  types are always converted ;
	- Fixed a memory leak.

2007-02-05  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h:
	Added an SPI to get the list of processes running on a remote machine.

	* src/lib/rbosa.rb,
	  src/rbosa_sdef.c:
	- API change for OSA.app and #merge: the :by_* prefixes of keywords have been
	  removed (for example, OSA.app(:path => '...') instead of 
	  OSA.app(:by_path => '...')) ;
	- Added the possibility to control remote applications, by passing the 
	  :machine keyword (:username and :password can also be used but they are not
	  mandatory). Work is still in progress.

	* bin/rdoc-osa,
	  sample/misc/sdef.rb,
	  tests/tc_get_app.rb,
	  TODO:
	Follow last change.

	* tests/tc_omnigraffle.rb,
	  tests/data/test.graffle:
	Added a test case to verify the last fix.

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	Smarter #get method, if the resolved object doesn't inherit from the 
	desired class, and if it has a property method with a class key/value,
	return a new descriptor of the desired class.

2007-02-03  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  bin/rdoc-osa:
	Adapted the generated RDoc to mention the possibility to pass optional
	parameters as a Hash key/value object.

2007-02-02  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_textedit.rb,
	  src/lib/rbosa_properties.rb,
	  src/lib/rbosa.rb,
	  sample/TextEdit/hello_world.rb:
	Auto-convert codes to symbols when converting Ruby Hash objects into OSA
	records. Register the application properties. Added a test case. Updated 
	sample code.

	* rubyosa.gemspec:
	Synchronized (using 0.2.1 for the version though).
